import org.springframework.boot.gradle.plugin.SpringBootPlugin

repositories {
    maven {
        url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

dependencies {
    implementation platform(SpringBootPlugin.BOM_COORDINATES)
    implementation project(':ccd-config-generator')
    // A filtered set of useful CCD POJOs including DTOs and other utilities.
    implementation ('com.github.hmcts.rse-cft-lib:ccd-lib:0.19.2186') {
        transitive = false
    }
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
    implementation 'org.flywaydb:flyway-core'
    implementation('com.github.hmcts:idam-java-client:3.1.0') {
        transitive = false
    }
    implementation 'com.github.hmcts:ccd-case-document-am-client:1.59.2'
    implementation 'com.github.hmcts:service-auth-provider-java-client:5.3.5'
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
    compileOnly 'io.github.openfeign:feign-core:13.14'
    compileOnly 'org.projectlombok:lombok:1.18.48'

    annotationProcessor 'org.projectlombok:lombok:1.18.48'

    implementation "org.springframework.boot:spring-boot-autoconfigure"
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'org.testcontainers', name: 'testcontainers'
    testImplementation group: 'org.testcontainers', name: 'junit-jupiter'
    testImplementation group: 'org.testcontainers', name: 'postgresql'
    runtimeOnly 'org.postgresql:postgresql'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
